--- a/views/login.html
+++ b/views/login.html
@@ -10,9 +10,9 @@
 	<div class="login-box-body">
   	<p class="login-box-msg">Iniciar la Sesión</p>
 		<form role="form" name="form2">
-			<div ng-show="loginError">
-				<p class="text-danger">Email o Contraseña incorrecta.</p>
-		</div>
+			<div id="error" class="text-danger">
+				<!-- <p class="text-danger">Email o Contraseña incorrecta.</p> -->
+		  </div>
 
   		<div class="form-group has-feedback" ng-class="{'has-error': form2.emailU.$invalid, 'has-success': form2.emailU.$valid}">        		
     			<input id="inputEmail" type="email" placeholder="correo"  class="form-control" name="emailU" ng-model="user.mail" required>      			
