--- a/views/login.html
+++ b/views/login.html
@@ -10,12 +10,11 @@
 	<div class="login-box-body">
   	<p class="login-box-msg">Iniciar la Sesión</p>
 		<form role="form" name="form2">
-			<div id="error" class="text-danger">
-				<!-- <p class="text-danger">Email o Contraseña incorrecta.</p> -->
-		  </div>
+			<div id="errorLogin" class="text-danger">        
+      </div>
 
   		<div class="form-group has-feedback" ng-class="{'has-error': form2.emailU.$invalid, 'has-success': form2.emailU.$valid}">        		
-    			<input id="inputEmail" type="email" placeholder="correo"  class="form-control" name="emailU" ng-model="user.mail" required>      			
+    			<input id="inputEmail" type="email" placeholder="E-mail"  class="form-control" name="emailU" ng-model="user.mail" required>      			
           	<span class="glyphicon glyphicon-envelope form-control-feedback"></span>
     			<div ng-show="form2.emailU.$dirty && form2.emailU.$invalid">
       			<p class="help-block text-danger" ng-show="form2.emailU.$error.required">Campo obligatorio</p>
