--- a/views/register.html
+++ b/views/register.html
@@ -1,7 +1,7 @@
 <div class="register-box">
   <div class="register-logo">
     <figure>
-      <img src="images/logo.png" alt="logo" style="width: 100px;" />
+      <img src="img/logo.png" alt="logo" style="width: 100px;" />
       <figcaption class="Header-imageDescription">
         <a href="index.html" class="Header-link"><b>CreArte-Web</b></a>
       </figcaption>
@@ -11,14 +11,12 @@
     <div class="register-box-body">
     <p class="login-box-msg">Crea tu cuenta</p>
     <form role="form" name="form1">
-      <div ng-show="newUserError">
-          <p class="text-danger">Error al crear usuario.</p>
+      <div id="errorRegister" class="text-danger">        
       </div>
-      <div ng-show="newUserCorrect">
-          <p class="text-danger">Se ha creado el usuario.</p>
-      </div>      
+      <div id="sucessLogin" class="text-primary">        
+      </div>
       <div class="form-group has-feedback" ng-class="{'has-error': form1.emailU.$invalid, 'has-success': form1.emailU.$valid}">
-        <input id="inputEmail" type="email" placeholder="alguien@example.com"  class="form-control" name="emailU" ng-model="user.mailC" required>
+        <input id="inputEmail" type="email" placeholder="E-mail"  class="form-control" name="emailU" ng-model="user.mailC" required>
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
         <div ng-show="form1.emailU.$dirty && form1.emailU.$invalid">
             <p class="help-block text-danger" ng-show="form1.emailU.$error.required">Campo obligatorio</p>
