--- a/views/login.html
+++ b/views/login.html
@@ -43,7 +43,7 @@
             </div><!-- /.col -->
         </div>
 		</form> 		
-  	<a href="#/register" class="text-center">Registrar un nuevo usuario</a>       
+  	<a href="#/registro" class="text-center">Registrar un nuevo usuario</a>       
   </div><!-- /.login-box-body -->
 </div>
 
