--- a/views/ventas/registroVentasCRD.html
+++ b/views/ventas/registroVentasCRD.html
@@ -65,31 +65,41 @@
   </form>
 
   <h2>Users</h2>
-  <div class="span6">
-    <table class="table table-striped table-condensed">
-      <thead>
-        <tr>
-          <th style="min-width: 80px;">Username</th>
-          <th style="min-width: 80px;">First name</th>
-          <th style="min-width: 80px;">Last name</th>
-          <th style="min-width: 80px;">Email</th>
-          <th style="min-width: 80px;">Password</th>
-          <th style="width:20px;"> </th>
-          <th style="width:20px;"> </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr ng-repeat="venta in regVentas">
-          <td>{{ venta.id }}</td>
-          <td>{{ venta.firstName }}</td>
-          <td>{{ venta.lastName }}</td>
-          <td>{{ venta.email }}</td>
-          <td>{{ venta.password }}</td>
-          <td><a ng-click="editUser(venta.id)" class="btn btn-small btn-primary">Edit</a></td>
-          <td><a ng-click="deleteUser(venta.id)" class="btn btn-small btn-danger">Delete</a></td>
-        </tr>
-      </tbody>
-    </table>
+            <div class="box">
+              <div class="box-header">
+                <h3 class="box-title">Data Table With Full Features</h3>
+              </div><!-- /.box-header -->
+              <div class="box-body">
+                <table id="example1" class="table table-bordered table-striped">
+                  <thead>
+                    <tr>
+                      <th style="min-width: 80px;">Username</th>
+                      <th style="min-width: 80px;">First name</th>
+                      <th style="min-width: 80px;">Last name</th>
+                      <th style="min-width: 80px;">Email</th>
+                      <th style="min-width: 80px;">Password</th>
+                      <th style="width:20px;"> </th>
+                      <th style="width:20px;"> </th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr ng-repeat="venta in regVentas">
+                      <td>{{ venta.id }}</td>
+                      <td>{{ venta.firstName }}</td>
+                      <td>{{ venta.lastName }}</td>
+                      <td>{{ venta.email }}</td>
+                      <td>{{ venta.password }}</td>
+                      <td><a ng-click="editUser(venta.id)" class="btn btn-small btn-primary">Edit</a></td>
+                      <td><a ng-click="deleteUser(venta.id)" class="btn btn-small btn-danger">Delete</a></td>
+                    </tr>
+                  </tfoot>
+                </table>
+              </div><!-- /.box-body -->
+            </div><!-- /.box -->
+          </div><!-- /.col -->
+        </div><!-- /.row -->
+      </section><!-- /.content -->
+    </div><!-- /.content-wrapper -->
   </div>
 
 
