--- a/views/compras/proveedoresCRD.html
+++ b/views/compras/proveedoresCRD.html
@@ -20,13 +20,15 @@
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
               <h4 class="modal-title" id="myModalLabel">Nuevo Proveedor</h4>
+              <div id="errorProveedor" class="text-danger"></div>
             </div>
             <div class="modal-body">
               <form id="form-proveedor-compra" role="form" name="form">
-                 <div class="form-group has-feedback" ng-class="{'has-error': form.rut.$invalid, 'has-success': form.rut.$valid}">           
+                 <div class="form-group has-feedback" ng-class="{'has-error': form.rut.$invalid || exitsProvider(), 'has-success': form.rut.$valid}">           
                     <input id="inputrut" type="text" placeholder="RUT"  class="form-control" name="rut" ng-model="proveedores.rut" required>                               
-                    <div ng-show="form.rut.$dirty && form.rut.$invalid">
+                    <div ng-show="form.rut.$dirty && form.rut.$invalid || exitsProvider()">
                       <p class="help-block text-danger" ng-show="form.rut.$error.required">Campo obligatorio</p>
+                      <p class="help-block text-danger" ng-show="exitsProvider()">Ya existe un Proveedor con este RUT</p>
                     </div>
                 </div>
                 <div class="form-group has-feedback" ng-class="{'has-error': form.name.$invalid, 'has-success': form.name.$valid}">           
@@ -68,7 +70,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>              
-              <button type="button" class="btn btn-primary btn-grabar-proveedor-compra" data-dismiss="modal" ng-click="createNewProvider(form)" ng-disabled="form.$invalid">Grabar</button>
+              <button type="button" class="btn btn-primary btn-grabar-proveedor-compra" data-dismiss="modal" ng-click="createNewProvider(form)" ng-disabled="form.$invalid || exitsProvider()">Grabar</button>
             </div>
           </div>
         </div>
