--- a/views/compras/registroCompras.html
+++ b/views/compras/registroCompras.html
@@ -2,8 +2,7 @@
 <section class="content-header">
   <h1>
     Registro de Compras
-  </h1>
-  <button type="btn brn-primary" ng-click="createNewUser()">Crear</button>
+  </h1>  
   <ol class="breadcrumb">
     <li><a href="#/"><i class="fa fa-home"></i> Inicio</a></li>
     <li><a href="#/registroCompras">Compras</a></li>
@@ -91,7 +90,7 @@
           </div>
         </div>
         <div class="col-md-2">
-          <div class="text-center" style="padding-top: 20px;"><button type="button" class="btn btn-lg btn-success btn-grabar-compra"><span class="glyphicon glyphicon-floppy-disk"></span> Grabar</button>
+          <div class="text-center" style="padding-top: 20px;" ><button type="button" class="btn btn-lg btn-success btn-grabar-compra" ng-click="createNewUser()"><span class="glyphicon glyphicon-floppy-disk"></span> Grabar</button>
           </div>
         </div>
       </div>
