--- a/views/login.html
+++ b/views/login.html
@@ -10,8 +10,7 @@
 	<div class="login-box-body">
   	<p class="login-box-msg">Iniciar la Sesión</p>
 		<form role="form" name="form2">
-			<div id="errorLogin" class="text-danger">        
-      </div>
+			<div id="errorLogin" class="text-danger"></div>
 
   		<div class="form-group has-feedback" ng-class="{'has-error': form2.emailU.$invalid, 'has-success': form2.emailU.$valid}">        		
     			<input id="inputEmail" type="email" placeholder="E-mail"  class="form-control" name="emailU" ng-model="user.mail" required>      			
