--- a/views/compras/registroPedidos.html
+++ b/views/compras/registroPedidos.html
@@ -1,12 +1,12 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
   <h1>
-    Registro de Compras
+    Registro de Pedidos
   </h1>  
   <ol class="breadcrumb">
     <li><a href="#/"><i class="fa fa-home"></i> Inicio</a></li>
-    <li><a href="#/registroCompras">Compras</a></li>
-    <li><a href="#/registroCompras">Registro de Compras</a></li>
+    <li><a href="#/registroPedidos">Pedidos</a></li>
+    <li><a href="#/registroPedidos">Registro de Pedidos</a></li>
   </ol>
 </section>
 
