--- a/views/ventas/clientesCRD.html
+++ b/views/ventas/clientesCRD.html
@@ -1,12 +1,12 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
   <h1>
-    Proveedores    
+    Clientes    
   </h1>  
   <ol class="breadcrumb">
     <li><a href="#/"><i class="fa fa-home"></i> Inicio</a></li>
-    <li><a href="#/proveedores">Compras</a></li>
-    <li><a href="#/proveedores">Proveedores</a></li>
+    <li><a href="#/clientesCRD">Ventas</a></li>
+    <li class="active">Clientes</li>
   </ol>
 </section>
 
@@ -19,45 +19,45 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-              <h4 class="modal-title" id="myModalLabel">Nuevo Proveedor</h4>
+              <h4 class="modal-title" id="myModalLabel">Nuevo Cliente</h4>
               <div id="errorProveedor" class="text-danger"></div>
             </div>
             <div class="modal-body">
               <form id="form-proveedor-compra" role="form" name="form">
-                 <div class="form-group has-feedback" ng-class="{'has-error': form.rut.$invalid || exitsProvider(), 'has-success': form.rut.$valid}">           
-                    <input id="inputrut" type="text" placeholder="RUT"  class="form-control" name="rut" ng-model="proveedores.rut" required>                               
-                    <div ng-show="form.rut.$dirty && form.rut.$invalid || exitsProvider()">
-                      <p class="help-block text-danger" ng-show="form.rut.$error.required">Campo obligatorio</p>
-                      <p class="help-block text-danger" ng-show="exitsProvider()">Ya existe un Proveedor con este RUT</p>
+                 <div class="form-group has-feedback" ng-class="{'has-error': form.id.$invalid || exitsCustomer(), 'has-success': form.id.$valid}">           
+                    <input id="inputid" type="text" placeholder="Id"  class="form-control" name="id" ng-model="customers.id" required>                               
+                    <div ng-show="form.id.$dirty && form.id.$invalid || exitsCustomer()">
+                      <p class="help-block text-danger" ng-show="form.id.$error.required">Campo obligatorio</p>
+                      <p class="help-block text-danger" ng-show="exitsCustomer()">Ya existe un Cliente con este Id</p>
                     </div>
                 </div>
                 <div class="form-group has-feedback" ng-class="{'has-error': form.name.$invalid, 'has-success': form.name.$valid}">           
-                    <input id="inputname" type="text" placeholder="Nombre"  class="form-control" name="name" ng-model="proveedores.name" required>                               
+                    <input id="inputname" type="text" placeholder="Nombre"  class="form-control" name="name" ng-model="customers.name" required>                               
                     <div ng-show="form.name.$dirty && form.name.$invalid">
                       <p class="help-block text-danger" ng-show="form.name.$error.required">Campo obligatorio</p>
                     </div>
                 </div>               
                 <div class="form-group has-feedback" ng-class="{'has-error': form.email.$invalid, 'has-success': form.email.$valid}">           
-                    <input id="inputEmail" type="email" placeholder="E-mail"  class="form-control" name="email" ng-model="proveedores.mail" required>                                 
+                    <input id="inputEmail" type="email" placeholder="E-mail"  class="form-control" name="email" ng-model="customers.mail" required>                                 
                     <div ng-show="form.email.$dirty && form.email.$invalid">
                       <p class="help-block text-danger" ng-show="form.email.$error.required">Campo obligatorio</p>
                       <p class="help-block text-danger" ng-show="form.email.$error.email">Email invalido</p>
                     </div>
                 </div>
                 <div class="form-group has-feedback" ng-class="{'has-error': form.address.$invalid, 'has-success': form.address.$valid}">           
-                    <input id="inputaddress" type="text" placeholder="Dirección"  class="form-control" name="address" ng-model="proveedores.address" required>                               
+                    <input id="inputaddress" type="text" placeholder="Dirección"  class="form-control" name="address" ng-model="customers.address" required>                               
                     <div ng-show="form.address.$dirty && form.address.$invalid">
                       <p class="help-block text-danger" ng-show="form.address.$error.required">Campo obligatorio</p>
                     </div>
                 </div>
                 <div class="form-group has-feedback" ng-class="{'has-error': form.phone.$invalid, 'has-success': form.phone.$valid}">           
-                    <input id="inputphone" type="text" placeholder="Teléfono"  class="form-control" name="phone" ng-model="proveedores.phone" required>                               
+                    <input id="inputphone" type="text" placeholder="Teléfono"  class="form-control" name="phone" ng-model="customers.phone" required>                               
                     <div ng-show="form.phone.$dirty && form.phone.$invalid">
                       <p class="help-block text-danger" ng-show="form.phone.$error.required">Campo obligatorio</p>
                     </div>
                 </div>  
                 <div class="form-group has-feedback" ng-class="{'has-error': form.area.$invalid, 'has-success': form.area.$valid}">  
-                    <select id="inputarea" placeholder="Zona" class="form-control" name="area" ng-model="proveedores.area" required>
+                    <select id="inputarea" placeholder="Zona" class="form-control" name="area" ng-model="customers.area" required>
                       <option>Zona Principal</option>
                       <option>Zona Rural</option>
                       <option>Zona Secundaria</option>
@@ -70,7 +70,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>              
-              <button type="button" class="btn btn-primary btn-grabar-proveedor-compra" data-dismiss="modal" ng-click="createNewProvider(form)" ng-disabled="form.$invalid || exitsProvider()">Grabar</button>
+              <button type="button" class="btn btn-primary btn-grabar-proveedor-compra" data-dismiss="modal" ng-click="createNewCustomer(form)" ng-disabled="form.$invalid || exitsCustomer()">Grabar</button>
             </div>
           </div>
         </div>
@@ -82,13 +82,13 @@
           
           <div class="input-group">
             <span class="text-left panel-title">Página: {{tableParams.page()}}</span>                   
-            <button type="button" class="btn btn-default pull-right" data-toggle="modal" data-target="#newProvider" aria-describedby="basic-addon2">Nuevo Proveedor</button> 
+            <button type="button" class="btn btn-default pull-right" data-toggle="modal" data-target="#newProvider" aria-describedby="basic-addon2">Nuevo Cliente</button> 
             <span class="input-group-addon" id="basic-addon2"><a data-toggle="modal" data-target="#newProvider"><span class="glyphicon glyphicon-plus"></span></a></span>
           </div>
           
           <div class="input-group" style="margin-top: 20px">
             <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
-            <input type="text" class="form-control" placeholder="Buscar por RUT" ng-model="buscar.rut">
+            <input type="text" class="form-control" placeholder="Buscar por Id" ng-model="buscar.id">
           </div>
         </div>        
         
@@ -98,9 +98,9 @@
               <thead>
                 <tr>
                   <th style="min-width: 80px;">
-                    RUT                  
-                    <span ng-hide="sort" class="fa fa-sort-amount-asc" style="cursor: pointer" ng-click="ordenarPor('-rut',true)"></span>
-                    <span ng-show="sort" class="fa fa-sort-amount-desc" style="cursor: pointer" ng-click="ordenarPor('rut',false)"></span>                                    
+                    Id                  
+                    <span ng-hide="sort" class="fa fa-sort-amount-asc" style="cursor: pointer" ng-click="ordenarPor('-id',true)"></span>
+                    <span ng-show="sort" class="fa fa-sort-amount-desc" style="cursor: pointer" ng-click="ordenarPor('id',false)"></span>                                    
                   </th>
                   <th style="min-width: 80px;">
                     Nombre
@@ -116,15 +116,15 @@
                 </tr>
               </thead>
               <tbody>
-                <tr ng-repeat="proveedor in $data | orderBy:ordenSeleccionado | filter:buscar">
-                  <td>{{ proveedor.rut }}</td>
-                  <td>{{ proveedor.name }}</td>                  
-                  <td>{{ proveedor.email }}</td>
-                  <td>{{ proveedor.address }}</td>
-                  <td>{{ proveedor.phone }}</td>
-                  <td>{{ proveedor.area }}</td>
-                  <td><a ng-click="editProvider(proveedor.rut)" class="btn btn-small btn-primary">Edit</a></td>
-                  <td><a ng-click="deleteProvider(proveedor.rut)" class="btn btn-small btn-danger">Delete</a></td>
+                <tr ng-repeat="customer in $data | orderBy:ordenSeleccionado | filter:buscar">
+                  <td>{{ customer.id }}</td>
+                  <td>{{ customer.name }}</td>                  
+                  <td>{{ customer.email }}</td>
+                  <td>{{ customer.address }}</td>
+                  <td>{{ customer.phone }}</td>
+                  <td>{{ customer.area }}</td>
+                  <td><a ng-click="editCustomer(customer.id)" class="btn btn-small btn-primary">Edit</a></td>
+                  <td><a ng-click="deleteCustomer(customer.id)" class="btn btn-small btn-danger">Delete</a></td>
                 </tr>
               </tbody>
               <tfoot>
