--- a/views/compras/proveedoresU.html
+++ b/views/compras/proveedoresU.html
@@ -4,9 +4,9 @@
     Actualiza la información    
   </h1>
   <ol class="breadcrumb">
-    <li><a href="#/"><i class="fa fa-home"></i> Inicio</a></li>
-    <li><a href="#/registroVentas">Ventas</a></li>
-    <li><a href="#/registroVentas">Registro de Ventas</a></li>
+    <li><a href="#/"><i class="fa fa-home"></i> Inicio</a></li>    
+    <li><a href="#/proveedoresCRD">Compras</a></li>    
+    <li class="active">Actualiza la información</li>
   </ol>
 </section>
 
