--- a/views/compras/registroPedidos.html
+++ b/views/compras/registroPedidos.html
@@ -5,8 +5,8 @@
   </h1>  
   <ol class="breadcrumb">
     <li><a href="#/"><i class="fa fa-home"></i> Inicio</a></li>
-    <li><a href="#/registroPedidos">Pedidos</a></li>
-    <li><a href="#/registroPedidos">Registro de Pedidos</a></li>
+    <li><a href="#/registroPedidos">Compras</a></li>
+    <li class="active">Registro de Pedidos</li>
   </ol>
 </section>
 
