--- a/views/productos/listaProductosCRD.html
+++ b/views/productos/listaProductosCRD.html
@@ -25,7 +25,7 @@
             <div class="modal-body">
               <form id="form-proveedor-compra" role="form" name="form">
                  <div class="form-group has-feedback" ng-class="{'has-error': form.codigoBarras.$invalid || exitsProduct(), 'has-success': form.codigoBarras.$valid}">           
-                    <input id="inputcodigoBarras" type="text" placeholder="Código de barras"  class="form-control" name="codigoBarras" ng-model="productsList.codigoBarras" required>
+                    <input id="inputcodigoBarras" type="text" autocomplete="off" placeholder="Código de barras"  class="form-control" name="codigoBarras" ng-model="productsList.codigoBarras" required>
                     <div ng-show="form.codigoBarras.$dirty && form.codigoBarras.$invalid || exitsProduct()">
                       <p class="help-block text-danger" ng-show="form.codigoBarras.$error.required">Campo obligatorio</p>
                       <p class="help-block text-danger" ng-show="exitsProduct()">Ya existe un Producto con este código de barras</p>
