Cambios para verificar el stock

--- a/views/inventario/stockActual.html
+++ b/views/inventario/stockActual.html
@@ -1,8 +1,7 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
   <h1>
-    Stock Actual
-    <small>Ejemplo para Stock Actual</small>    
+    Stock Actual     
   </h1>
   <ol class="breadcrumb">
     <li><a href="#/"><i class="fa fa-home"></i> Inicio</a></li>
@@ -15,7 +14,7 @@
 <section class="content"> 
   <div class="row">
     <div class="col-lg-12">          
-      <div class="modal fade" id="newProvider" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal fade" id="newProduct" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
@@ -109,8 +108,8 @@
           
           <div class="input-group">
             <span class="text-left panel-title">Página: {{tableParams.page()}}</span>                   
-            <button type="button" class="btn btn-default pull-right" data-toggle="modal" data-target="#newProvider" aria-describedby="basic-addon2">Nuevo Producto</button> 
-            <span class="input-group-addon" id="basic-addon2"><a data-toggle="modal" data-target="#newProvider"><span class="glyphicon glyphicon-plus"></span></a></span>
+            <button type="button" class="btn btn-default pull-right" data-toggle="modal" data-target="#newProduct" aria-describedby="basic-addon2">Nuevo Producto</button> 
+            <span class="input-group-addon" id="basic-addon2"><a data-toggle="modal" data-target="#newProduct"><span class="glyphicon glyphicon-plus"></span></a></span>
           </div>
           
           <div class="input-group" style="margin-top: 20px">
